@@ -1,3 +1,11 @@
+2014-08-01  Antonio Ceballos  <aceballos@gmail.com>
+
+	* configure.ac: simple man page based on help2man.
+	* Makefile.am: simple man page based on help2man.
+	* man/: simple man page based on help2man.
+	* man/Makefile.am: simple man page based on help2man.
+	* doc/Makefile.am: small error in header description,
+
 2014-07-29  Antonio Ceballos  <aceballos@gmail.com>
 
 	* src/frontend/debug.cc: compile with no warnings when DEBUG
